# waiter_menu

./: .gitignore  README.md  manage.py  pyproject.toml
core/: admin.py  apps.py  consumers.py  filtersets.py  permissions.py  routing.py  serializers.py  urls.py  views.py
core/models/: __init__.py  category.py  demand.py  desk.py  item.py
core/views/: __init__.py  category.py  menu.py  waiter.py
waiter/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
waiter_menue/: asgi.py  settings.py  urls.py  wsgi.py
